# esp32-cam-sync-system

./: CMakeLists.txt  README.md  build.py  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig  app_config.h  app_main.c  app_state.c  app_state.h  cam_manager.c  cam_manager.h  idf_component.yml  ini.h  main.c  mdns_names.c  mdns_names.h  mdns_util.h  ov2640_ctrl.c  ov2640_ctrl.h  reg_cache.c  reg_cache.h  reg_profiles.c  reg_profiles.h  sdcard.h  sdmmc_mount.c  sdmmc_mount.h  server.h  slave_client.c  slave_client.h  trigger_gpio.c  trigger_gpio.h  web_server.c  web_server.h  wifi.h  wifi_sta.c  wifi_sta.h
master/data/www/: index.html  scripts.js  styles.css
master/src/: main.c  ov2640_control.c  sccb_driver.c  storage.c  web_interface.c
sdcard/www/: app.css  app.js  index.html  registers.html  registers.js
shared/include/: sccb_driver.h  sync_protocol.h
slave/include/: ov2640_regs.h
slave/src/: main.c  slave_sync.c
